# epicyon

./: .gitlab-ci.yml  .woodpecker.yml  CONTRIBUTING.md  Dockerfile  INSTALL.md  MAINTENANCE-TERMS.md  Makefile  README.md  README_architecture.md  README_coding_style.md  README_commandline.md  README_customizations.md  README_desktop_client.md  README_goals.md  README_roadmap.md  acceptreject.py  announce.py  art.py  auth.py  availability.py  benchmarks  blocking.py  blog.py  blurhash.py  bookmarks.py  briar.py  cache.py  caddy.example.conf  calendar.py  capabilities.py  categories.py  city.py  code-of-conduct.md  config.py  content.py  context.py  conversation.py  crawlers.py  cwlists.py  cwtch.py  (+222 more)
cwlists/: ableist.json  ai_generated.json  dailymail.json  dei.json  iftas.json  journalism.json  military_us.json  murdoch.json  paywalled.json  russianstate.json  satire.json  ukrwthinktanks.json  usrwthinktanks.json
datashards/: __init__.py  client.py  usexp.py  utils.py
defaultcategories/: en.xml
defaultwelcome/: en.md  en.txt~  final_ar.md  final_ca.md  final_cy.md  final_en.md  final_es.md  final_fr.md  final_ga.md  final_hi.md  final_it.md  final_ja.md  final_ku.md  final_pt.md  final_ru.md  final_zh.md  help_dm_en.md  help_inbox_en.md  help_tlshares_en.md  profile_ar.md  profile_ca.md  profile_cy.md  profile_de.md  profile_en.md  profile_es.md  profile_fr.md  profile_ga.md  profile_hi.md  profile_it.md  profile_ja.md  profile_ru.md  profile_zh.md  welcome_ar.md  welcome_ca.md  welcome_cy.md  welcome_de.md  welcome_en.md  welcome_es.md  welcome_fr.md  welcome_ga.md  (+6 more)
(+329 files in other folders)
