[metadata]
name = epicyon
version = 1.2.0

[options]
packages = .
install_requires =
  crypto >= 1.4.1, < 2
  idna >= 2.5, < 3
  numpy >= 1.20.0, < 2
  pillow >= 8.1.0, < 9
  pycryptodome >= 3.9.9, < 4
  pyqrcode >= 1.2.1, < 2
  python-dateutil >= 2.8.1, < 3
  requests >= 2.25.1, < 3
  socks  # no versions https://pypi.org/project/socks/
